    -Deprecated some methods whose visibility will be decreased (e.g. from public
     to protected)
    -Command line: enabling and disabling specific rules at the same time is now allowed.
     In order to test only some rules (disabling all the rest), which previously was done
     with "--enable LIST_OF_RULES", now use "--enabledonly --enable LIST_OF_RULES" 
     (or "-eo -e LIST_OF_RULES").

-Embedded server:
    -Two new options can be set in the properties file to make LanguageTool
     return the same XML format as After the Deadline (AtD). This way it can be used
     as a drop-in replacement for AtD:
     * mode - 'LanguageTool' or 'AfterTheDeadline'
     * afterTheDeadlineLanguage - code of default language if mode is set to 'AfterTheDeadline'
     NOTE: the 'AfterTheDeadline' mode should be considered experimental for now.

-Internals:
    -The compound rule now ignores tokens that have been immunized in the disambiguation.xml


2.6 (2014-06-30)

-Breton:
    -updated FSA spelling dictionary from An Drouizig Breton Spellchecker 0.12
    -updated POS dictionary from Apertium (svn r53329)
    -improved several rules

-Catalan:
    -fixed false alarms
    -added and improved rules
    -updated tagger dictionary
    -Morfologik spellchecking rule is enabled for use in LibreOffice/OpenOffice
     extension. The Hunspell spellchecker should be manually disabled in
     LibreOffice/OpenOffice for the results to be visible.
        
-English:
    -The spelling rule now accepts words with hyphens if the parts are valid words.
     For example, "web-based" is accepted now. This avoids a lot of false alarms.
    -fixed a thread-safety problem in the synthesizer
    -added/improved several rules

-Esperanto:
    -added several rules

-French:
    -updated POS tag dictionary and Hunspell dictionary to Dicollecte-5.1
    -added/improved several rules

-German:
    -fixed false alarm for words like "Stil-" in phrases like "Stil- und 
     Grammatikprüfung" (issue #93)