@@ -44,6 +44,8 @@ LanguageTool Change Log
      In order to test only some rules (disabling all the rest), which previously was done
      with "--enable LIST_OF_RULES", now use "--enabledonly --enable LIST_OF_RULES" 
      (or "-eo -e LIST_OF_RULES").
+    -MorfologikSpellerRule.getRuleMatch(String, int) has been renamed to
+     MorfologikSpellerRule.getRuleMatches(String, int)
 
 -Embedded server:
     -Two new options can be set in the properties file to make LanguageTool
